[package]
name = "otp_session_lib"
version = "0.4.1"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.70"
description = "A components library to support one-time-password and user session."
keywords = ["otp", "one-time-password", "sessions", "secrets" ]
license = "MIT OR Apach-2.0"
readme = "README.md"
homepage = "https://github.com/darrylwest/otp-session-lib"
repository = "https://github.com/darrylwest/otp-session-lib"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
fastrand = "2.0.1"
hashbrown = { version = "0.14.3", features = ["serde"] }
log = "0.4.20"
log4rs = "1.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
